sync grassdocs.css with trunk (avoid toc vs. body overlap)
git-svn-id: https://svn.osgeo.org/grass/grass/branches/releasebranch_7_0@62783 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/man/grassdocs.css
+++ b/man/grassdocs.css
@@ -23,7 +23,7 @@ body{
     padding-left:  10px;
     padding-right: 10px;
 /*    width: 750px; */
-    width: 70%;
+    width: 60%;
     background-color: white;
     height:auto !important;
     min-height: 100%;
